tests/bad/case_without_bar.ppl
case True of True -> fail False -> fail
